<resources>
    <string name="app_name">Repetinder</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="username">username</string>
    <string name="Register">Register</string>
    <string name="repetinder">Repetinder</string>
    <string name="name">fullname</string>
    <string name="sing_up">sing up</string>
    <string name="icon_profile">PROFILE</string>
    <string name="icon_matches">MATCHES</string>
    <string name="icon_home">HOME</string>
    <string name="profile_name">fullname</string>
    <string name="subject">subject</string>
    <string name="user_type">Status: Student</string>
    <string name="profile_email">xyz@mail.ru</string>
    <string name="profile_username">username</string>
    <string name="waiting_text">Wait until you are chosen</string>
    <string name="logout">log out</string>
    <string-array name="user_type">
        <item>Student</item>
        <item>Tutor</item>
    </string-array>

    <string-array name="subjects">
        <item>Select subject</item>
        <item>Math</item>
        <item>Computer Science</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Psychology</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Spanish</item>
        <item>Russian</item>
        <item>Literature</item>
        <item>Design</item>
        <item>Economics</item>
        <item>Law</item>
        <item>Music</item>
        <item>History</item>
    </string-array>
</resources>