<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.052083332" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9557292" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="139dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/reverse_gradient"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="0dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_profile_photo" />

    <TextView
        android:id="@+id/fullnameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />


    <TextView
        android:id="@+id/subjectProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/subject"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fullnameProfile"
        app:layout_constraintStart_toStartOf="@+id/fullnameProfile"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="start"
        android:text="Info"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/userRoleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/user_type"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/mailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/profile_email"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/userRoleProfile" />

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/profile_username"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/mailProfile" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:background="@color/transparent"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/logout"
        android:textColor="@color/purple_500"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>